wordpress-demo/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: app
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: app
    spec:
      containers:
      - image: wordpress:apache
        name: wordpress
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /index.php
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /index.php
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
